--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,16 +11,68 @@ html {
 }
 
 body {
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 20px;
+  padding-left: 20px;
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  // background-image: url(../images/bg-pattern.png);
+  background-image: url(../images/grey_@2X.png);
 
   color: #212121;
 }
 
-.container {
-  margin: 0 auto;
-  padding: 15px;
-  height: 100vw;
+.search-form {
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  text-align: center;
+
+  & input {
+    font-size: 22px;
+  }
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+.button-next {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
+  background-color: rgb(200, 255, 200);
+  border-width: 1px;
+  font-size: 22px;
+}
+
+.button-next.is-hidden {
+  display: none;
+}
+
+.photo-card {
+  margin-bottom: 10px;
+  & > img {
+    width: 320px;
+    height: 240px;
+  }
+
+  & > .stats {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  & .stats-item {
+    display: flex;
+    align-items: center;
+  }
+
+  & .material-icons {
+    margin-right: 5px;
+  }
 }
