--- a/src/templates/page-next.hbs
+++ b/src/templates/page-next.hbs
@@ -1,3 +1,3 @@
 <button type="button" class="button-next is-hidden" data-action="load-more">
-    <span class="label">Показать ещё</span>
+    <span class="label">Load more</span>
 </button>
